# BIONIC

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  index.html  install_PyG.sh  main.py  model.py  pyproject.toml  run_attention_trial.py  run_bionic.py  run_bionic_train.py  run_classification_heads.py  run_hyperparameter_tuning.py  run_trial.py  sbatch_bionic.sh  sbatch_bionic_train.sh  setup.py  wheels.html
.github/workflows/: build-wheels.yml  package.yml  python-package.yml
bionic/: cli.py  layers.py  main.py  model.py  run_bionic.py  run_hyperparameter_attention.py  run_trial.py  sbatch_bionic.sh  train.py
bionic/config/: costanzo_hu_krogan.json  costanzo_hu_krogan_semisupervised.json  gav_krog.json  human_ppi.json  krog_hu_cos.json  yeast_gi_coex_ppi.json  yeast_gi_coex_ppi_semisupervised.json  yeast_gi_coex_ppi_tensorboard.json
bionic/inputs/: Costanzo.txt  Hein-2015.txt  Hu.txt  Huttlin-2015.txt  Huttlin-2017.txt  Krogan.txt  Rolland-2014.txt  bioid-cell-map.txt  bioplex-293t.txt  bioplex-hct116.txt  depmap-99-9.txt  gene_data_train.json  gene_data_train_0.json  gene_data_train_1.json  gene_data_train_2.json  gene_data_train_3.json  gene_data_train_4.json  gene_data_valid_0.json  gene_data_valid_1.json  gene_data_valid_2.json  gene_data_valid_3.json  gene_data_valid_4.json  opencell.txt  test_gene_data.json  yeast_IntAct_complex_labels.json
bionic/model/: attention.py  classification_heads.py  layers.py  loss.py  model.py
bionic/tests/: test_main.py  test_train.py
bionic/tests/config/: mock_config.json  mock_config_no_outname.json
bionic/tests/inputs/: mock_labels.json  mock_network_1.txt  mock_network_2.txt
bionic/tests/outputs/: mock_integration_features.tsv
bionic/tests/utils/: test_config_parser.py  test_preprocessor.py
bionic/utils/: combining_results_into_dataframe.py  common.py  config_parser.py  plotter.py  preprocessor.py  sampler.py
config/: gav_krog.json
inputs/: Gavin.txt
src/: layers.py  main.py  model.py  preprocessor.py  test.py
src/config/: gav_krog.json
src/configs/: gav_krog.json
src/inputs/: Krogan.txt
src/tests/: test_main.py
src/tests/utils/: test_config_parser.py  test_preprocessor.py
src/utils/: config_parser.py  plotter.py  preprocessor.py  sampler.py
utils/: config_parser.py  plotter.py  preprocessor.py
