[tool.poetry]
name = "bionic-model"
version = "0.2.2"
description = "Biological network integration using convolutions."
authors = ["Duncan Forster <duncan.forster@mail.utoronto.ca>"]
license = "MIT"
packages = [
  {include = "bionic"}
]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "2020.4.5.1"
cffi = "1.14.0"
chardet = "3.0.4"
cycler = "0.10.0"
decorator = "4.4.2"
googledrivedownloader = "0.4"
h5py = "2.10.0"
idna = "2.9"
imageio = "2.8.0"
isodate = "0.6.0"
joblib = "0.14.1"
kiwisolver = "1.2.0"
llvmlite = "0.32.0"
matplotlib = "3.2.1"
networkx = "2.4"
numba = "0.49.0"
numpy = "1.18.1"
olefile = "0.46"
pandas = "1.0.3"
Pillow = "9.0.1"
plyfile = "0.7.2"
pycparser = "2.20"
pyparsing = "2.4.7"
python-dateutil = "2.8.1"
pytz = "2019.3"
PyWavelets = "1.1.1"
rdflib = "5.0.0"
requests = "2.26.0"
scikit-image = "0.16.2"
scikit-learn = "0.22.2.post1"
scipy = "1.4.1"
six = "1.14.0"
urllib3 = "1.26.5"
pytest = "^6.0.1"
typer = {extras = ["all"], version = "^0.3.1"}
colorama = "^0.4.3"
tensorboard = "^2.7.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.17.0"
pre-commit = "^2.6.0"
flake8 = "^3.8.3"

[tool.poetry.scripts]
bionic = "bionic.cli:main"

[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
